PLANET-7242: Fix title text covered by background (#2113)
Ref: https://jira.greenpeace.org/browse/PLANET-7242

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -201,6 +201,7 @@
   --nav-item--font-weight: var(--font-weight-regular);
   --nav-donate--font-weight: var(--font-weight-regular);
   --page-header-title--font-family: var(--font-family-heading);
+  --page-header-title--line-height: 1.5em;
   --block-articles--article--meta--font-family: var(--font-family-paragraph-secondary);
   --block-articles--article--meta--font-size: var(--font-size-s--font-family-tertiary);
   --block-covers--publication-date--font-family: var(--font-family-paragraph-secondary);
